<resources>
    <string name="app_name">My Application</string>
    <string name="bonjour">Bonjour ceci est un test des ressources</string>
    <string name="exercice_3">Exercice 3</string>
    <string name="exercice_2">Exercice 2</string>
    <string name="exo3">Exo3</string>
    <string name="nom">Nom</string>
    <string name="pr_nom">Prénom</string>
    <string name="num_ro_de_t_l_phone">Numéro de téléphone</string>
    <string name="domaine_de_comp_tences">domaine de compétences</string>
    <string name="age">Age</string>
    <string name="valider">Valider</string>
    <string name="exo4">Exo4</string>
    <string name="exercice_4">Exercice 4</string>
    <string name="changer_la_language">Changer la langue</string>
    <string name="exercice_5">Exercice 5</string>
    <string name="exo5">Exo5</string>
    <string name="valider2">Êtes vous sur de votre selection</string>
    <string name="exercice_6">Exercice 6</string>
    <string name="exo6">Exo6</string>
    <string name="retour">Retour</string>
    <string name="ok">OK</string>
    <string name="exercice_7">Exercice 7</string>
    <string name="exo7">Exo7</string>
    <string name="appeler">Appeler</string>
    <string name="exercice_8">Exercice 8</string>
    <string name="exo8">Exo8</string>
    <string name="vers">vers</string>
    <string-array name="ville">
        <item>Narbonne</item>
        <item>Montpellier</item>
        <item>Beziers</item>
    </string-array>
    <string-array name="NvM">
        <item>Train n°14 : 8h00 ; arrivée à 10h00</item>
        <item>Train n°15 : 10h00 ; arrivée à 12h00</item>
        <item>Train n°16 : 12h00 ; arrivée à 14h00</item>
    </string-array>
    <string-array name="MvN">
        <item>Train n°17 : 14h00 ; arrivée à 16h00</item>
        <item>Train n°18 : 16h00 ; arrivée à 18h00</item>
    </string-array>
    <string-array name="NvB">
        <item>Train n°19 : 18h00 ; arrivée à 20h00</item>
        <item>Train n°20 : 20h00 ; arrivée à 22h00</item>
    </string-array>
    <string-array name="BvN">
        <item>Train n°21 : 22h00 ; arrivée à 00h00</item>
    </string-array>
    <string-array name="BvM">
        <item>Train n°22 : 00h00 ; arrivée à 02h00</item>
        <item>Train n°23 : 02h00 ; arrivée à 04h00</item>
    </string-array>
    <string-array name="MvB">
        <item>Train n°24 : 04h00 ; arrivée à 06h00</item>
    </string-array>


    <string name="exercice_9">Exercice 9</string>
    <string name="exo9">Exo9</string>
    <string name="ajouter_un_v_nement">Ajouter un événement</string>

</resources>