<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ex6_page_recup">
    <!--  ducoup vue que c'est un relativelayout, on dois tout définir en fonction d'un parent pour positionner-->


    <EditText
        android:id="@+id/editTextTextMultiLine2"
        android:layout_width="348dp"
        android:layout_height="146dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="284dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="@string/domaine_de_comp_tences"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/editTextText"
        android:layout_width="169dp"
        android:layout_height="49dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="109dp"
        android:ems="10"
        android:minHeight="48dp"
        android:text="@string/nom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/editTextText3"
        android:layout_width="169dp"
        android:layout_height="49dp"
        android:layout_below="@+id/editTextText"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:minHeight="48dp"
        android:text="@string/age"
        app:layout_constraintEnd_toEndOf="@id/editTextText"
        app:layout_constraintStart_toStartOf="@id/editTextText"
        app:layout_constraintTop_toBottomOf="@id/editTextText"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/editTextPhone"
        android:layout_width="169dp"
        android:layout_height="49dp"
        android:layout_below="@+id/editTextText2"
        android:layout_marginStart="17dp"
        android:layout_marginTop="9dp"
        android:layout_toEndOf="@+id/editTextText3"
        android:minHeight="48dp"
        android:text="@string/num_ro_de_t_l_phone"
        app:layout_constraintEnd_toEndOf="@id/editTextText2"
        app:layout_constraintStart_toStartOf="@id/editTextText2"
        app:layout_constraintTop_toBottomOf="@+id/editTextText2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/editTextText2"
        android:layout_width="169dp"
        android:layout_height="49dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="108dp"
        android:layout_toEndOf="@+id/editTextText"
        android:ems="10"
        android:minHeight="48dp"
        android:text="@string/pr_nom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextText"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editTextTextMultiLine2"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="-114dp"
        android:text="@string/ok"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:background="#673AB7"
        android:text="@string/retour"
        app:backgroundTint="#3F51B5"
        app:rippleColor="#03A9F4" />


</RelativeLayout>