<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Exo3">
<!--  ducoup vue que c'est un relativelayout, on dois tout définir en fonction d'un parent pour positionner-->

  <TextView
      android:id="@+id/textView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentStart="true"
      android:layout_alignParentEnd="true"
      android:layout_marginStart="194dp"
      android:layout_marginEnd="185dp"
      android:text="@string/exo3"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.022" />

  <EditText
      android:id="@+id/editTextText"
      android:layout_width="169dp"
      android:layout_height="49dp"
      android:layout_alignParentStart="true"
      android:layout_alignParentTop="true"
      android:layout_marginStart="24dp"
      android:layout_marginTop="45dp"
      android:ems="10"
      android:hint="@string/nom"
      android:inputType="text"
      android:minHeight="48dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.074"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.149"
      tools:ignore="LabelFor" />

  <EditText
      android:id="@+id/editTextText2"
      android:layout_width="169dp"
      android:layout_height="49dp"
      android:layout_alignParentTop="true"
      android:layout_marginStart="17dp"
      android:layout_marginTop="44dp"
      android:layout_toEndOf="@+id/editTextText"
      android:ems="10"
      android:hint="@string/pr_nom"
      android:inputType="text"
      android:minHeight="48dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.214"
      app:layout_constraintStart_toEndOf="@+id/editTextText"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.15"
      tools:ignore="LabelFor" />


  <EditText
      android:id="@+id/editTextText3"
      android:layout_width="169dp"
      android:layout_height="49dp"
      android:layout_below="@+id/editTextText"
      android:layout_alignParentStart="true"
      android:layout_marginStart="24dp"
      android:layout_marginTop="8dp"
      android:ems="10"
      android:hint="@string/age"
      android:inputType="text"
      android:minHeight="48dp"
      app:layout_constraintEnd_toEndOf="@id/editTextText"
      app:layout_constraintHorizontal_bias="0.074"
      app:layout_constraintStart_toStartOf="@id/editTextText"
      app:layout_constraintTop_toBottomOf="@id/editTextText"
      app:layout_constraintVertical_bias="0.149"
      tools:ignore="MissingConstraints" />


  <EditText
      android:id="@+id/editTextPhone"
      android:layout_width="169dp"
      android:layout_height="49dp"
      android:layout_below="@+id/editTextText2"
      android:layout_marginStart="17dp"
      android:layout_marginTop="9dp"
      android:layout_toEndOf="@+id/editTextText3"
      android:hint="@string/num_ro_de_t_l_phone"
      android:inputType="phone"
      android:minHeight="48dp"
      app:layout_constraintEnd_toEndOf="@id/editTextText2"
      app:layout_constraintHorizontal_bias="0.214"
      app:layout_constraintStart_toStartOf="@id/editTextText2"
      app:layout_constraintTop_toBottomOf="@+id/editTextText2"
      app:layout_constraintVertical_bias="0.15"
      tools:ignore="MissingConstraints" />

  <EditText
      android:id="@+id/editTextTextMultiLine2"
      android:layout_width="348dp"
      android:layout_height="146dp"
      android:layout_alignParentStart="true"
      android:layout_alignParentEnd="true"
      android:layout_alignParentBottom="true"
      android:layout_marginStart="26dp"
      android:layout_marginEnd="36dp"
      android:layout_marginBottom="348dp"
      android:ems="10"
      android:gravity="start|top"
      android:hint="@string/domaine_de_comp_tences"
      android:inputType="textMultiLine"
      tools:ignore="MissingConstraints"
      tools:layout_editor_absoluteX="31dp"
      tools:layout_editor_absoluteY="253dp" />

  <Button
      android:id="@+id/button2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBottom="@+id/editTextTextMultiLine2"
      android:layout_alignParentEnd="true"
      android:layout_marginEnd="163dp"
      android:layout_marginBottom="-114dp"
      android:text="@string/valider"
      tools:ignore="MissingConstraints"
      tools:layout_editor_absoluteX="160dp"
      tools:layout_editor_absoluteY="501dp" />


</RelativeLayout>