<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="#673AB7"
        android:text="@string/retour"
        app:backgroundTint="#3F51B5"
 />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="228dp"
        android:layout_height="228dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="95dp"
        android:layout_marginBottom="212dp"
        android:background="#CC1D1D"
        app:srcCompat="@android:drawable/stat_sys_phone_call" />

    <TextView
        android:id="@+id/editTextPhone"
        android:layout_width="169dp"
        android:layout_height="49dp"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="121dp"
        android:layout_marginEnd="121dp"
        android:layout_marginBottom="-74dp"
        android:minHeight="48dp"
        android:text="@string/num_ro_de_t_l_phone" />

    <Button
        android:id="@+id/appeler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editTextPhone"
        android:layout_alignParentStart="true"
        android:layout_marginStart="152dp"
        android:layout_marginBottom="-100dp"
        android:text="@string/appeler" />


</RelativeLayout>