<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/main">

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:text="@string/exo8" />


<!--    menu déroulant pour selectionner une ville -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"

        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:spinnerMode="dropdown" />

<!--        séparateur -->
        <View
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vers" />

        <View
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="48dp"

            android:spinnerMode="dropdown" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:layout_gravity="center"

        android:text="@string/valider" />
    <View
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_weight="1" />

</LinearLayout>